--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   height: 100vh;
-  /* background: url('https://rare-gallery.com/uploads/posts/585390-abstract-background.jpg'); */
+  background: url('https://material-kit-pro-react.devias.io/assets/gradient-bg.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
